--- a/style.css
+++ b/style.css
@@ -1,4 +1,28 @@
-.base_color {
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.prof_picture {
+  width: 70px;
+  margin-left: 30px;
+  margin-bottom: 15px;
+  border-radius: 35px;
+  display: block;
+}
+
+h1, p.no_sauna {
+  font-size: 14px;
+  font-weight: 200;
+}
+
+p.base_color {
   color: #666;
 }
 
@@ -25,3 +49,4 @@
 .github_icon:hover {
   color: #333;
 }
+
