--- a/style.css
+++ b/style.css
@@ -11,15 +11,15 @@ html, body {
 
 .prof_picture {
   width: 70px;
-  margin-left: 30px;
   margin-bottom: 15px;
   border-radius: 35px;
   display: block;
 }
 
-h1, p.no_sauna {
+h1 {
   font-size: 14px;
   font-weight: 200;
+  color: #666;
 }
 
 p.base_color {
