--- a/style.css
+++ b/style.css
@@ -50,3 +50,10 @@ p.base_color {
   color: #333;
 }
 
+.footer {
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  color: #999;
+}
