--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ p.base_color {
 .footer {
   text-align: center;
   position: fixed;
-  bottom: 0;
   width: 100%;
-  color: #999;
+  color: #DDD;
 }
