--- a/style.css
+++ b/style.css
@@ -27,6 +27,18 @@ p.base_color {
   color: #666;
 }
 
+a.damus_color {
+  color: #666;
+}
+
+a.damus_color:hover {
+  color: #8b5cf6;
+  -webkit-transition: all 0.35s ease;
+  -moz-transition: all 0.35s ease;
+  -o-transition: all 0.35s ease;
+  transition: all  0.35s ease;
+}
+
 .github_icon {
   color: #999;
   -webkit-transition: all 0.35s ease;
