--- a/assets/style.css
+++ b/assets/style.css
@@ -41,6 +41,26 @@ a.nostr_link:hover {
   transition: all  0.35s ease;
 }
 
+span.nostr_pub_key {
+  font-size: 10px;
+}
+
+span.nostr_pub_key:hover {
+  color: #8b5cf6;
+  -webkit-transition: all 0.35s ease;
+  -moz-transition: all 0.35s ease;
+  -o-transition: all 0.35s ease;
+  transition: all  0.35s ease;
+}
+
+i.nostr_pub_key:hover {
+  color: #8b5cf6;
+  -webkit-transition: all 0.35s ease;
+  -moz-transition: all 0.35s ease;
+  -o-transition: all 0.35s ease;
+  transition: all  0.35s ease;
+}
+
 .github_icon {
   color: #999;
   -webkit-transition: all 0.35s ease;
@@ -80,6 +100,7 @@ a.nostr_link:hover {
 .footer {
   display: flex;
   justify-content: center;
+  font-size: 14px;
   font-weight: 200;
   width: 100%;
 }
